--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
         <div class="bg-gray-800 text-left rounded-lg p-4 mb-6 shadow-lg">
           <p class="font-mono text-green-300 text-sm sm:text-base">
+            echo "deb [trusted=yes] https://dhanushs005.github.io/rdrop/ ./" | sudo tee /etc/apt/sources.list.d/reddrop.list<br />
             sudo apt update<br />
-            sudo apt install reddrop
+            sudo apt install rdrop
           </p>
         </div>
 
